src/objects/BT_CO_ARMS_ExportAccountSummary__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>exportData__c</fullName>
        <label>exportData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>groupId__c</fullName>
        <label>groupId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortOrder__c</fullName>
        <label>sortOrder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_ExportAccountSummary</label>
    <nameField>
        <label>BT_CO_ARMS_ExportAccountSummary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_ExportAccountSummary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>